301
This no longer loops, now reports an error:

{code}
a.scala:4: error: illegal inheritance;
 template $$anon inherits different type instances of trait Map:
scala.collection.mutable.Map[Int,scala.collection.mutable.Set[Int]] and scala.collection.mutable.Map[Int,Set[Int]]
    val pairs = new HashMap[Int, Set[Int]] with MultiMap[Int, Int];
                ^
{code}
